--- a/css/index.css
+++ b/css/index.css
@@ -7,12 +7,12 @@
   font-family: "Montserrat", sans-serif;
 }
 
-#imagem:before {
+body:before {
   content: "";
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url("https://images.unsplash.com/photo-1521590832167-7bcbfaa6381f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-image: url("https://images.unsplash.com/photo-1542751371-adc38448a05e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
   filter: brightness(60%);
   display: flex;
@@ -45,8 +45,12 @@ menu a {
   color: black;
 }
 
+h1 {
+  margin-bottom: 8rem;
+}
+
 .textCenter {
-  margin-top: 20rem;
+  margin-top: 12rem;
   display: flex;
   flex-direction: column;
   align-items: center;
