--- a/css/principal.css
+++ b/css/principal.css
@@ -45,7 +45,7 @@ li {
 }
 
 .btn1 a {
-  background-color: #a63333;
+  background-color: #F24738;
   border: none;
   color: white;
   padding: 16px;
