--- a/css/evento.css
+++ b/css/evento.css
@@ -1,5 +1,45 @@
-h1 {
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.title h1 {
+    margin: 0;
+    margin-left: 3rem;
+    margin-top: 3rem;
     color: white;
     position: relative;
-    margin-left: 5rem;
+}
+.eventsPrc {
+    position: relative;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.events {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 3rem;
+}
+
+ h2 {
+    color: white;
+    border-bottom: 1px solid #F24738;
+    padding-bottom: 1rem; 
+}
+
+.descricao p {
+    margin-top: .5rem;
+    color: white;
+    font-size: 1em;
+}
+
+.image img {
+    border-radius: 0;
+    cursor: pointer;
+    width: 25vw;
+    height: 20vh;
 }
