--- a/css/evento.css
+++ b/css/evento.css
@@ -19,10 +19,12 @@
 }
 
 .events {
-    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem 3rem;
+    width: 30rem;
+    text-align: center;
+
 }
 
  h2 {
@@ -40,6 +42,6 @@
 .image img {
     border-radius: 0;
     cursor: pointer;
-    width: 25vw;
-    height: 20vh;
+    width: 20rem;
+    height: 10rem;
 }
