--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@ menu li {
 menu a {
   text-decoration: none;
   color: black;
+  padding: .5rem;
 }
 
 h1 {
@@ -83,6 +84,11 @@ p {
   color: white;
 }
 
+.teste {
+  background-color: #F24738;
+  color: white;
+}
+
 @media (max-width: 992px) {
   header {
     flex-direction: column;
@@ -116,3 +122,4 @@ p {
     margin-top: 5rem;
   }
 }
+
