--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,8 @@
 body:before {
   content: "";
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-image: url("https://images.unsplash.com/photo-1542751371-adc38448a05e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
   filter: brightness(60%);
@@ -43,7 +43,7 @@ menu li {
 menu a {
   text-decoration: none;
   color: black;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 h1 {
@@ -85,40 +85,30 @@ p {
 }
 
 .teste {
-  background-color: #F24738;
+  background-color: #f24738;
   color: white;
 }
 
-@media (max-width: 992px) {
+@media all and (max-width: 768px) {
   header {
     flex-direction: column;
   }
+}
+
+@media all and (max-width: 575px) {
   menu li {
-    padding-top: 0;
+    padding: 0.5rem;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+    margin-bottom: 5rem;
   }
   p {
     font-size: 1.5rem;
   }
-  .textCenter {
-    margin-top: 15rem;
-  }
+
   .redes {
     font-size: 2rem;
-    margin-top: 5rem;
-  }
-  .redes li {
-    padding: 1rem;
-  }
-}
-
-@media (max-width: 400px) {
-  img {
-    width: 5rem;
-  }
-  p {
-    font-size: 1rem;
-  }
-  .textCenter {
-    margin-top: 5rem;
   }
 }
