--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,6 @@ p {
 }
 
 @media all and (max-width: 1200px) {
- 
   h1 {
     font-size: 1.8rem;
     margin-bottom: 5rem;
@@ -110,24 +109,17 @@ p {
   header {
     flex-direction: column;
   }
+  .textCenter {
+    margin-top: 7em;
+  }
+  .redes {
+    font-size: 1.5rem;
+  }
 }
 
 @media all and (max-width: 575px) {
   menu li {
     padding: 0.5rem;
-  }
-
-  h1 {
-    font-size: 1.8rem;
-    margin-bottom: 5rem;
-  }
-
-  p {
-    font-size: 1.5rem;
-  }
-
-  .redes {
-    font-size: 2rem;
   }
 }
 
