Responsividade nas outras páginas

--- a/css/evento.css
+++ b/css/evento.css
@@ -6,10 +6,11 @@
 
 .title h1 {
     margin: 0;
-    margin-left: 3rem;
-    margin-top: 3rem;
+    margin-left: 2em;
+    margin-top: 2rem;
     color: white;
     position: relative;
+    font-size: 1.5rem;
 }
 .eventsPrc {
     position: relative;
@@ -21,13 +22,13 @@
 .events {
     flex-direction: column;
     align-items: center;
-    padding: 2rem 3rem;
-    width: 30rem;
+    padding: 1rem;
+    width: 20rem;
     text-align: center;
 
 }
 
- h2 {
+ h4 {
     color: white;
     border-bottom: 1px solid #F24738;
     padding-bottom: 1rem; 
@@ -36,16 +37,23 @@
 .descricao p {
     margin-top: .5rem;
     color: white;
-    font-size: 1em;
+    font-size: .8em;
 }
 
 .image img {
     border-radius: 0;
     cursor: pointer;
-    width: 20rem;
-    height: 10rem;
+    width: 15rem;
+    height: 7rem;
+}
+@media all and (max-width: 768px) {
+    body:before {
+        height: 120%;
+    }
 }
 
-@media all and (max-width: 575px) { 
-
-   }
+@media all and (max-width: 575px) {
+    body:before {
+        height: 200%;
+    }
+}
