--- a/css/login.css
+++ b/css/login.css
@@ -91,6 +91,21 @@ a {
   font-size: 0.7em;
 }
 
+
+@media all and (max-width: 1440px) {
+  .title img {
+    width: 8rem;
+  }
+  .form2 {
+    margin-top: 3rem;
+  }
+
+  .btn1 button {
+    padding: 14px 30px;
+
+  }
+}
+
 @media (max-width: 992px) {
   .title img {
     width: 7rem;
